<resources>
    <string name="app_name">Hackathon3_GroupA</string>
    <string name="text_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_praesent_in_posuere_dui_in_hac_habitasse_platea_dictumst_morbi_vitae_tincidunt_leo_etiam_id_libero_at_turpis_mollis_posuere_consectetur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in posuere dui. In hac habitasse platea dictumst. Morbi vitae tincidunt leo. Etiam id libero at turpis mollis posuere consectetur.</string>
    <string name="text_by_farm_fresh_veg_shop">By Farm fresh veg shop</string>
    <string name="text_banana">Banana</string>
    <string name="text_idr_18_000">IDR 18.000</string>
    <string name="text__2">2</string>

</resources>