<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ImageView
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gradasi"
        android:layout_width="278dp"
        android:layout_height="278dp"
        android:layout_marginTop="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gradasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gradasi2"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="140dp"
        android:scaleType="centerCrop"
        android:src="@drawable/gradasi2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/banana"
        android:layout_width="276dp"
        android:layout_height="257dp"
        android:layout_marginTop="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/banana"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/rating"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="45dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toBottomOf="@id/gradasi"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/rating3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="156dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rating3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item3" />

    <ImageView
        android:id="@+id/buynow"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item3" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="224dp"
        android:scaleType="centerCrop"
        android:src="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item3" />

    <ImageView
        android:id="@+id/minus"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="156dp"
        android:scaleType="centerCrop"
        android:src="@drawable/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item3" />

    <ImageView
        android:id="@+id/rating2"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="49dp"
        android:scaleType="centerCrop"
        android:src="@drawable/rating2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/text_banana"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banana" />

    <TextView
        android:id="@+id/tv_item2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/text_by_farm_fresh_veg_shop"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item" />

    <TextView
        android:id="@+id/tv_item3"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:text="@string/text_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_praesent_in_posuere_dui_in_hac_habitasse_platea_dictumst_morbi_vitae_tincidunt_leo_etiam_id_libero_at_turpis_mollis_posuere_consectetur"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item2" />


    <TextView
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="308dp"
        android:text="@string/text_idr_18_000"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banana" />

    <TextView
        android:layout_width="10dp"
        android:layout_height="30dp"
        android:layout_marginTop="308dp"
        android:text="@string/text__2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banana" />


</androidx.constraintlayout.widget.ConstraintLayout>